<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GURU PAUD Apps</string>

    <string name="play_game">Play game</string>
    <string name="stop_game">Stop game</string>
    <string name="you_finished_level_n">You finished level %s!</string>
    <string name="missed_that_one">Missed that one!</string>
    <string name="game_over">Game over!</string>
    <string name="level_label">Level:</string>
    <string name="more_levels_than_ever">More Levels than Ever!</string>
    <string name="new_top_score">New Top Score!</string>
    <string name="your_top_score_is">Top score: %s</string>
    <string name="you_completed_n_levels">Levels completed: %s</string>
    <string name="popping_pin">Popping Pin</string>
    <string name="score_label">Score:</string>
    <string name="maxNumber">999</string>

    <string name="kids_pre_school_learning">Kids Pre-School Learning</string>
    <string name="we_improve_your_knowledge">we improve your knowledge</string>
    <string name="Dashboard">Pengenalan</string>
    <string name="Video">Video</string>
    <string name="Game">Permainan</string>
    <string name="Pengguna">Pengguna</string>
    <string name="category_title">category Name</string>
    <string name="animals_dashboard">Binatang</string>
    <string name="feedback">Feedback</string>
    <string name="takeQuiz">Take Quiz</string>
    <string name="habits">Habits</string>
    <string name="islamic_months">Nama Bulan (Islam)</string>
    <string name="partsofbody">Bagian Tubuh</string>
    <string name="monthsNames">Nama Bulan</string>
    <string name="daysNames">Nama Hari</string>
    <string name="shapes">Bentuk</string>
    <string name="vegetables">Sayuran</string>
    <string name="fruits">Buah</string>
    <string name="maths">Berhitung</string>
    <string name="english">Membaca</string>
    <string name="trace_the_letters">Trace The Letters</string>
    <string name="alphabets">Alphabets</string>
    <string name="english_alphabets">English Alphabets</string>
    <string name="aa">Aa</string>
    <string name="bb">Bb</string>
    <string name="ball">Ball</string>
    <string name="cc">Cc</string>
    <string name="Cat">Cat</string>
    <string name="dd">Dd</string>
    <string name="doll">Doll</string>
    <string name="ee">Ee</string>
    <string name="Elephant">Elephant</string>
    <string name="fish">Fish</string>
    <string name="ff">Ff</string>
    <string name="gg">Gg</string>
    <string name="Goat">Goat</string>
    <string name="hh">Hh</string>
    <string name="Horse">Horse</string>
    <string name="kk">Kk</string>
    <string name="Keys">Keys</string>
    <string name="Ii">I i</string>
    <string name="Ink">Ink Pot</string>
    <string name="Jug">Jug</string>
    <string name="Jj">J j</string>
    <string name="ll">L l</string>
    <string name="Lion">Lion</string>
    <string name="mm">M m</string>
    <string name="Monkey">Monkey</string>
    <string name="nn">N n</string>
    <string name="nest">Nest</string>
    <string name="oo">O o</string>
    <string name="pp">P p</string>
    <string name="Parrot">Parrot</string>
    <string name="qq">Q q</string>
    <string name="Queen">Queen</string>
    <string name="rr">R r</string>
    <string name="Rabbit">Rabbit</string>
    <string name="ss">S s</string>
    <string name="Sun">Sun</string>
    <string name="tt">T t</string>
    <string name="Tortoise">Tortoise</string>
    <string name="uu">U u</string>
    <string name="Umbrella">Umbrella</string>
    <string name="vv">V v</string>
    <string name="Van">Van</string>
    <string name="ww">W w</string>
    <string name="Watch">Watch</string>
    <string name="xx">X x</string>
    <string name="Xray">X Ray</string>
    <string name="yy">Y y</string>
    <string name="Yoyo">Yoyo</string>
    <string name="zz">Z z</string>
    <string name="Zebra">Zebra</string>
    <string name="traceletters">Trace Letters</string>
    <string name="counting">Counting</string>
    <string name="tables">Maths Tables</string>
    <string name="addition">Addition</string>
    <string name="Subtraction">Subtraction</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="apples">Apples</string>
    <string name="Three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Pengenalan</string>
    <string name="title_notifications">Notifications</string>
    <string name="prayers">Prayers</string>
    <string name="goodHabits">Good Habits</string>
    <string name="mathsadd">Mathematics Addition</string>
    <string name="fruitsandvegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="apple">Apple</string>
    <string name="orange">Orange</string>
    <string name="banana">Banana</string>
    <string name="cherry">Cherry</string>
    <string name="peer">Peer</string>
    <string name="grapes">Grapes</string>
    <string name="ras_berries">Ras Berries</string>
    <string name="water_melon">Water Melon</string>
    <string name="appricot">Appricot</string>
    <string name="black_berry">Black Berry</string>
    <string name="pomegrenate">Pomegrenate</string>
    <string name="mango">Mango</string>
    <string name="pineapple">PineApple</string>
    <string name="strawberry">Strawberry</string>
    <string name="lemon">Lemon</string>
    <string name="tomato">Tomato</string>
    <string name="carrot">Carrot</string>
    <string name="cucumber">Cucumber</string>
    <string name="cauliflower">Cauli Flower</string>
    <string name="cabbage">Cabbage</string>
    <string name="onion">Onion</string>
    <string name="greenCapcicum">Green Capsicum</string>
    <string name="redcapsicum">Red    Capsicum</string>
    <string name="yellow_capsicum">Yellow Capsicum</string>
    <string name="corn">Corn</string>
    <string name="peas">Peas</string>
    <string name="redchilli">Red Chilli</string>
    <string name="brinjal">Brinjal</string>
    <string name="potato">Potato</string>
    <string name="salad">Salad</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="raddish">Reddish</string>
    <string name="turnip">Turnip</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="oval">Oval</string>
    <string name="heart">Heart</string>
    <string name="star">Star</string>
    <string name="cresent">Cresent</string>
    <string name="cross">Cross</string>
    <string name="badhabits">Bad Habits</string>
    <string name="mathsSub">Mathematics Subtraction</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="November">November</string>
    <string name="december">December</string>
    <string name="Monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="october">October</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nose">Nose</string>
    <string name="ear">Ear</string>
    <string name="eyes">Eyes</string>
    <string name="hand">Hand</string>
    <string name="mouth">Mouth</string>
    <string name="face">Face</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="neck">Neck</string>
    <string name="finger">Finger</string>
    <string name="arm">Arm</string>
    <string name="foot">Foot</string>
    <string name="leg">Leg</string>
    <string name="belly">Belly</string>
    <string name="marks">Quiz Result</string>
    <string name="quiz">Quiz</string>
    <string name="enter_your_name">Enter Name</string>
    <string name="enter_your_class">Enter your class</string>
    <string name="startQuiz">Start Quiz</string>

</resources>
