<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quizzes.StartQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="LaunchDashboard"
            android:background="@android:color/transparent"
            android:src="@drawable/back_ic"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:text="@string/quiz"
            android:fontFamily="@font/sniglet_regular"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/enterName_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20sp"
            android:background="@drawable/eedittext"
            android:hint="@string/enter_your_name"
            android:fontFamily="@font/sniglet_regular" />

        <EditText
            android:id="@+id/enterClass_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20sp"
            android:background="@drawable/eedittext"
            android:hint="@string/enter_your_class"
            android:fontFamily="@font/sniglet_regular" />

        <Button
            android:id="@+id/startQuizBtn_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/startQuiz"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/sniglet_regular" />

    </LinearLayout>



</LinearLayout>